--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: sparks
-description: A bright and bold dating app built with Flutter 💖💙
+description: "A bright and bold dating app built with Flutter"
 
 publish_to: 'none' 
 
